# nematode

./: .dockerignore  .env.template  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  codecov.yml  docker-compose.yaml  pyproject.toml
.github/prompts/: openspec-apply.prompt.md  openspec-archive.prompt.md  openspec-proposal.prompt.md
.github/workflows/: README.md  nightly-tests.yml  pre-commit.yml  tests.yml
artifacts/: README.md
benchmarks/legacy/: README.md
configs/: README.md  classic_medium.yml  dynamic_medium_2q.yml  dynamic_medium_4q.yml  dynamic_medium_8q.yml  dynamic_small.yml  dynamic_small_2q.yml  dynamic_small_4q.yml  dynamic_small_8q.yml  mlp_medium.yml  modular_medium.yml  modular_medium_6q.yml
configs/evolution/: baldwin_lstmppo_klinotaxis_predator_pilot.yml  baldwin_lstmppo_klinotaxis_predator_retry_pilot.yml  coevolution_full.yml  coevolution_pilot_arm_a.yml  coevolution_pilot_arm_b.yml  coevolution_smoke.yml  control_lstmppo_klinotaxis_predator_retry_pilot.yml  feedforwardga_foraging_small.yml  feedforwardga_small_combined_klinotaxis.yml  feedforwardga_small_continuous2d_combined_klinotaxis.yml  feedforwardga_small_predator_klinotaxis.yml  hyperparam_lstmppo_klinotaxis_pilot.yml  hyperparam_mlpppo_pilot.yml  lamarckian_lstmppo_klinotaxis_predator_control.yml  lamarckian_lstmppo_klinotaxis_predator_pilot.yml  lstmppo_foraging_small_klinotaxis.yml  mlpppo_foraging_small.yml  qvarcircuit_foraging_small.yml  qvarcircuit_predators_small.yml  tei_prior_m613_control.yml  tei_prior_m613_smoke.yml  tei_prior_m613_tei_weights.yml  tei_prior_m613_weights_only.yml  transgenerational_m69_control.yml  transgenerational_m69_smoke.yml  transgenerational_m69_tei_on.yml  transgenerational_m69_weights_only.yml  transgenerational_pathogen_avoidance_lstmppo_klinotaxis.yml  transgenerational_pathogen_avoidance_lstmppo_klinotaxis_smoke.yml  transgenerational_pathogen_avoidance_lstmppo_klinotaxis_tei_off.yml
configs/examples/: crh_foraging_small.yml  crh_thermotaxis_pursuit_predators_large.yml  crh_thermotaxis_pursuit_predators_large_standalone.yml  crh_thermotaxis_stationary_predators_large.yml  crhqlstm_pursuit_predators_small.yml  evolution_cmaes_2qubit.yml  evolution_modular_foraging_small.yml  evolution_modular_predators_small.yml  evolution_qvarcircuit_foraging_small.yml  evolution_qvarcircuit_predators_small.yml  evolution_small_predators.yml  hybridclassical_foraging_small.yml  hybridclassical_pursuit_predators_small.yml  hybridclassical_pursuit_predators_small_finetune.yml  hybridquantum_pursuit_predators_small.yml  hybridquantumcortex_foraging_small_2a.yml  hybridquantumcortex_pursuit_predators_small.yml  hybridquantumcortex_pursuit_predators_small_2b.yml  hybridquantumcortex_pursuit_predators_small_2c.yml  hybridquantumcortex_pursuit_predators_small_finetune.yml  hybridquantumcortex_pursuit_predators_small_finetune_3.yml  lstmppo_foraging_small_derivative.yml  lstmppo_foraging_small_temporal.yml  lstmppo_pursuit_predators_small_derivative.yml  lstmppo_pursuit_predators_small_temporal.yml  lstmppo_thermotaxis_pursuit_predators_large_derivative.yml  lstmppo_thermotaxis_pursuit_predators_large_temporal.yml  lstmppo_thermotaxis_stationary_predators_large_derivative.yml  lstmppo_thermotaxis_stationary_predators_large_temporal.yml  mlp_dynamic_large.yml  mlp_dynamic_large_predators.yml  mlp_dynamic_medium.yml  mlp_dynamic_medium_predators.yml  mlp_dynamic_small.yml  mlp_dynamic_small_predators.yml  mlp_foraging_large.yml  mlp_foraging_medium.yml  mlp_foraging_small.yml  mlp_medium.yml  mlp_predators_large.yml  (+153 more)
configs/special/: hybridclassical_pursuit_small_finetune_oracle.yml  hybridquantum_pursuit_small_finetune_oracle.yml  hybridquantumcortex_foraging_small_1_oracle.yml  hybridquantumcortex_foraging_small_2a_oracle.yml  hybridquantumcortex_pursuit_small_2b_oracle.yml  hybridquantumcortex_pursuit_small_2c_oracle.yml  hybridquantumcortex_pursuit_small_2c_round2_oracle.yml  hybridquantumcortex_pursuit_small_finetune_3_oracle.yml  qvarcircuit_foraging_small_validate_oracle.yml  qvarcircuit_predators_small_appetitive_aversive_oracle.yml  qvarcircuit_predators_small_finetune_oracle.yml  qvarcircuit_predators_small_trajectory_oracle.yml  qvarcircuit_predators_small_validate_oracle.yml
data/chemotaxis/: README.md  behavioural_bias_signatures.json  literature_ci_values.json
data/connectome/: PROVENANCE.md  cook_2019_si5_connectome_adjacency.xlsx  witvliet_2020_dataset8_adult.xlsx
data/thermotaxis/: behavioural_bias_signatures.json
docs/: OPTIMIZATION_METHODS.md  STANDARDIZATION.md  WORKPLAN.md  nematode_biology.md  roadmap.md
docs/architecture/: plugin-developer-guide.md
docs/experiments/: README.md
docs/nematodebench/: EVALUATION.md  LEADERBOARD.md  README.md  REPRODUCIBILITY.md  SUBMISSION_GUIDE.md
docs/research/: associative-memory-probe.md  policy-architecture-candidates.md  quantum-architectures.md
notebooks/: simulate.ipynb
notebooks/experiments/: simulate_memory_1.ipynb
openspec/: AGENTS.md  config.yaml  project.md
quantum_nematode/: agent.py  brain.py  env.py
scripts/: __init__.py  benchmark_submit.py  compare_plasticity_results.py  evaluate_submission.py  experiment_query.py  export_screenshot.py  extract_runs.py  manage_jobs.py  qef_mi_analysis.py  qrh_mi_analysis.py  run_coevolution.py  run_evolution.py  run_health_scaling_study.sh  run_plasticity_test.py  run_simulation.py
scripts/analysis/: __init__.py  associative_memory_separation.py  behavioural_chemotaxis_validation.py  bit_memory_separation.py  connectome_structure_controls.py  connectome_structure_efficiency.py  minimal_rnn_reactive_ab.py  t7_continuous_ranking.py  t7_ga_champion_eval.py  weight_search_architecture_ranking.py
scripts/benchmarks/: __init__.py  bench_evolution_smoke.py
scripts/campaigns/: __init__.py  aggregate_baldwin_retry_pilot.py  aggregate_m2_pilot.py  aggregate_m3_pilot.py  aggregate_m4_pilot.py  aggregate_m5_pilot.py  aggregate_m613_pilot.py  (+28 more)
(+2589 files in other folders)
