[project]
name = "quantum-nematode-workspace"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "pydantic>=2.11.4",
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]

[project.optional-dependencies]
cpu = [
  "quantum-nematode[cpu]",
]
gpu = [
  "quantum-nematode[gpu]",
]
torch = [
  "quantum-nematode[torch]",
]

[tool.uv.sources]
quantum-nematode = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false
dev-dependencies = [
    "quantum-nematode",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ['ALL']
ignore = ['TD002', 'TD003']

[tool.ruff.lint.per-file-ignores]
"/**/tests/**/*.py" = [
  "ANN",
  "ARG",
  "D100",
  "D104",
  "PLR2004",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # https://numpydoc.readthedocs.io/en/latest/format.html#sections

[tool.pyright]
include = [
  "packages/quantum-nematode",
]
exclude = [
  "**/__pycache__",
  "**/*venv*",
  "**/.direnv",
  "**/.pkg",
  "**/.virtual_documents",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMatchNotExhaustive = "error"
reportUnusedFunction = "error"
reportConstantRedefinition = "error"
pythonVersion = "3.12"
pythonPlatform = "Linux"
python.autoComplete.extraPaths = [
    "packages/quantum-nematode",
]
python.analysis.extraPaths = [
    "packages/quantum-nematode",
]
