[project]
name = "quantum-nematode-workspace"
version = "1.0.0"
description = "Quantum brain simulation workspace for C. elegans nematode navigation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = []
maintainers = []
requires-python = ">=3.12,<3.13"
keywords = [
    "quantum",
    "machine-learning",
    "nematode",
    "simulation",
    "qiskit",
    "quantum-computing",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Private :: Do Not Upload",
]
dependencies = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "ruff>=0.11.6",
]

[project.urls]
Homepage = "https://github.com/SyntheticBrains/nematode"
Repository = "https://github.com/SyntheticBrains/nematode"
Documentation = "https://github.com/SyntheticBrains/nematode#readme"
Issues = "https://github.com/SyntheticBrains/nematode/issues"

[project.optional-dependencies]
cpu = [
  "quantum-nematode[cpu]",
]
gpu = [
  "quantum-nematode[gpu]",
]
torch = [
  "quantum-nematode[torch]",
]
qpu = [
  "quantum-nematode[qpu]",
]

[tool.uv.sources]
quantum-nematode = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false
dev-dependencies = [
    "quantum-nematode",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ['ALL']
ignore = ['FIX002', 'PLC0415', 'TD002', 'TD003']

[tool.ruff.lint.per-file-ignores]
"/**/tests/**/*.py" = [
  "ANN",
  "ARG",
  "D100",
  "D104",
  "PLR2004",
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # https://numpydoc.readthedocs.io/en/latest/format.html#sections

[tool.pyright]
include = [
  "packages/quantum-nematode",
]
exclude = [
  "**/__pycache__",
  "**/*venv*",
  "**/.direnv",
  "**/.pkg",
  "**/.virtual_documents",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMatchNotExhaustive = "error"
reportUnusedFunction = "error"
reportConstantRedefinition = "error"
pythonVersion = "3.12"
pythonPlatform = "Linux"
python.autoComplete.extraPaths = [
    "packages/quantum-nematode",
]
python.analysis.extraPaths = [
    "packages/quantum-nematode",
]
